tests/snapshots/messages__type16_dual_assignment.snap
---
source: tests/messages.rs
expression: "parse(b\"!AIVDM,1,1,,A,@1mg=5CcNJ;4<P01b4N?AT00,0*21\")"
---
AssignmentModeCommand(
    AssignmentModeCommand {
        message_type: 16,
        repeat_indicator: 0,
        mmsi: 123456789,
        mmsi1: 987654321,
        offset1: 200,
        increment1: 0,
        mmsi2: Some(
            111222333,
        ),
        offset2: Some(
            400,
        ),
        increment2: Some(
            0,
        ),
    },
)
