tests/snapshots/messages__type16_single_assignment.snap
---
source: tests/messages.rs
expression: "parse(b\"!AIVDM,1,1,,A,@1mg=5CcNJ;4<P00,0*12\")"
---
AssignmentModeCommand(
    AssignmentModeCommand {
        message_type: 16,
        repeat_indicator: 0,
        mmsi: 123456789,
        mmsi1: 987654321,
        offset1: 200,
        increment1: 0,
        mmsi2: None,
        offset2: None,
        increment2: None,
    },
)
