tests/snapshots/messages__type18_class_b_display.snap
---
source: tests/messages.rs
expression: "parse(b\"!AIVDM,1,1,,B,B6:io8@0=21k=`3C:eDJSww4SP00,0*68\")"
---
ClassBPositionReport(
    ClassBPositionReport {
        message_type: 18,
        repeat_indicator: 0,
        mmsi: 413955873,
        speed_over_ground: Some(
            5.2,
        ),
        position_accuracy: UnaugmentedGnss,
        longitude: Some(
            113.42115,
        ),
        latitude: Some(
            23.065102,
        ),
        course_over_ground: Some(
            42.4,
        ),
        true_heading: None,
        timestamp: 62,
        regional: 0,
        cs: true,
        display: false,
        dsc: false,
        band: true,
        msg22: false,
        assigned: false,
        raim: false,
        radio: Itdma(
            ItdmaMessage {
                sync_state: NumberOfReceivedStations,
                slot_increment: 0,
                num_slots: 0,
                keep: false,
            },
        ),
    },
)
